fix: modif style message pour aligner visuel des nav. Edge/Chrome avec FF

--- a/css/style.css
+++ b/css/style.css
@@ -226,10 +226,14 @@ button {
     text-align: center;
 }
 .msg {
-    font-size: clamp(1rem, 4vmin, 1.5rem);
+    --font-props: clamp(1rem, 4vmin, 1.5rem);
+    font-size: var(--font-props);
+    line-height: var(--font-props);
     color: var(--color-font);
     position: absolute;
     top: var(--message-top-position);
+    width: calc(100vw - 2rem);
+    text-align: center;
     opacity: 1;
     transform: translateY(0);
     transition-duration: 0.5s;
